--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
-    <title>St. Philips</title>
+    <title>St. Philips church</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
