Update for client meeting 4/4/18
Added new tabs in "About" dropbox,
uploaded more photos for "Giving" tab, new content for "History" tab, etc.

--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -37,7 +37,9 @@
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="about.html">INFO</a>
+							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
+    						<a class="dropdown-item" href="rentals.html">RENTALS</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="giving.html">Giving</a></li>
@@ -78,7 +80,7 @@
 	<div class="container">
 		<h2 class="christening-header">CONFIRMATION</h2>
 			<article class="christening-content">
-				<p>have a baptism coming up? <br> <br>
+				<p>have a confirmation coming up? <br> <br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				</p>
