--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -38,7 +38,9 @@
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="about.html">INFO</a>
+							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
+    						<a class="dropdown-item" href="rentals.html">RENTALS</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li class="current"><a href="giving.html">Giving</a></li>
@@ -86,8 +88,8 @@
 			<div class="container">
 
 				<div class="treasure-boxes">
-					<img src="circle.png">
-					<h3>MONETARY</h3>
+					<div id="circle-1"></div>
+					<h3 class="treasure-names">MONETARY</h3>
 					<p>Miscellaneous monetary 
 					<br>
 					donations for, e.g. prayer 
@@ -99,8 +101,8 @@
 				</div>
 	
 				<div class="treasure-boxes">
-					<img src="circle.png">
-					<h3>IN-KIND</h3>
+					<div id="circle-2"></div>
+					<h3 class="treasure-names">IN-KIND</h3>
 					<p>In-Kind donations
 					<br>
 					- paper goods,
@@ -112,8 +114,8 @@
 				</div>
 		
 				<div class="treasure-boxes">
-					<img src="circle.png">
-					<h3>TREE OF LIFE</h3>
+					<div id="circle-3"></div>
+					<h3 class="treasure-names">TREE OF LIFE</h3>
 					<p>Tree of Life - 
 					<br>purchase leaves 
 					<br>for rememberance</p>
