--- a/pt St. Philips/about-3.html
+++ b/pt St. Philips/about-3.html
@@ -35,7 +35,9 @@
 					<li><a href="index.html">Home</a></li>
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="current dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
+    						<a class="dropdown-item" href="rentals.html">RENTALS</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="giving.html">Giving</a></li>
@@ -58,10 +60,23 @@
 					<li><a href="about-3.html"><span class="active-service">STAFF</span></a></li>
 					<li><a href="about-4.html">DIRECTIONS</a></li>
 				</ul>
+				<div class="container" style="float: left;">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
 			</section>
+			
 		</div>
 	</div>
 <!-- About End -->
+	
+	<div class="container">
+		
+	</div>
 
 <!-- Footer -->
 		<section style="margin-top: 0;" id="newsletter">
