--- a/pt St. Philips/events2.html
+++ b/pt St. Philips/events2.html
@@ -35,7 +35,10 @@
 					<li><a href="index.html">Home</a></li>
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="current dropdown-toggle"><a href="#">About</a></li>
 						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    						<a class="dropdown-item" href="about.html">INFO</a>
+							<a class="dropdown-item" href="about.html">INFO</a>
+							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
+    						<a class="dropdown-item" href="events.html">EVENTS</a>
+    						<a class="dropdown-item" href="rentals.html">RENTALS</a>
   						</li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="giving.html">Giving</a></li>
