St. Philips April 4th Update
New image placements, rental tabs, statements, history placements, etc.

--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -76,10 +76,10 @@
 	</div>
 </section>
 
-<section id="christening">
+<section id="confirmation">
 	<div class="container">
-		<h2 class="christening-header">CONFIRMATION</h2>
-			<article class="christening-content">
+		<h2 class="confirmation-header">CONFIRMATION</h2>
+			<article class="confirmation-content">
 				<p>have a confirmation coming up? <br> <br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -87,13 +87,13 @@
 			</article>
 
 			<div id="actual-c-button">
-				<button id="christening-button" type="button" class="btn btn-primary btn-lg christening-button">APPLY</button>
+				<button id="confirmation-button" type="button" class="btn btn-primary btn-lg confirmation-button">APPLY</button>
 			</div>
 
 	</div>
 </section>
 
-<section id="baptisim">
+<section id="birthday">
 	<div class="container">
 		<h2 class="baptisim-header">BIRTHDAY</h2>
 			<article class="baptisim-content">
@@ -109,10 +109,10 @@
 	</div>
 </section>
 
-<section id="christening">
+<section id="anniversary">
 	<div class="container">
-		<h2 class="christening-header">ANNIVERSARIES</h2>
-			<article class="christening-content">
+		<h2 class="anniversary-header">ANNIVERSARIES</h2>
+			<article class="anniversary-content">
 				<p>have a anniversary coming up? <br> <br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -120,7 +120,7 @@
 			</article>
 
 			<div id="actual-c-button">
-				<button id="christening-button" type="button" class="btn btn-primary btn-lg christening-button">APPLY</button>
+				<button id="anniversary-button" type="button" class="btn btn-primary btn-lg anniversary-button">APPLY</button>
 			</div>
 
 	</div>
@@ -143,6 +143,8 @@
 			</div>
 		</section>
 <!-- Footer End -->
+
+<a href="#birthday"><img class="down" src="arrow.png"></a>
 
 	<footer>
 		<p>2017 &copy; St. Philip's Church. All rights reserved.</p>
