--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -55,7 +55,7 @@
 			<div class="container">
 				<div class="box">
 					<h2>Event 1</h2>
-					<a href="events-list-1.html"><img src="..."></a>
+					<a href="events-list-1.html"><img style="min-width: 333px; max-width: 333px;" src="./pics/Jazz 1.jpg"></a>
 					<p><i><span style="color: black; font-size: 200%; font-weight: bold; margin-right: 0.1em;">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
