--- a/pt St. Philips/about-3.html
+++ b/pt St. Philips/about-3.html
@@ -60,23 +60,19 @@
 					<li><a href="about-3.html"><span class="active-service">STAFF</span></a></li>
 					<li><a href="about-4.html">DIRECTIONS</a></li>
 				</ul>
-				<div class="container" style="float: left;">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
 			</section>
-			
 		</div>
 	</div>
 <!-- About End -->
 	
-	<div class="container">
-		
-	</div>
+			<div class="container" style="text-align: center;">
+				<img src="./staff/gsilver.jpg">
+				<img src="./staff/fedwards.jpg">
+				<img src="./staff/ecarlson.jpg">
+				<img src="./staff/dj.jpg">
+				<img src="./staff/clovell.jpg">
+				<img src="./staff/cbreyer.jpg">
+			</div>
 
 <!-- Footer -->
 		<section style="margin-top: 0;" id="newsletter">
