--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -56,6 +56,7 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -66,6 +67,9 @@
     </div>
     <div class="carousel-item">
       <img id="caro-img" class="d-block w-100" src="./pics/Altar1.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img id="caro-img" class="d-block w-100" src="./pics/bells.png" alt="Fourth slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -78,6 +82,27 @@
   </a>
 </div>
 <!-- Carousel End -->
+
+<header></header>
+
+<div class="container">
+
+<section id="mission">
+	<div id="mission-start" class="container">
+		<h2 class="mission-header mission-header-green">The Mission of St. Philip's
+			Church is:
+		</h2>
+			<article class="mission-top-sub">
+				<p>To be a welcoming and vibrant intergenerational community
+					of faith, focused on sharing the Gospel of Jesus Christ
+					through joyful worship and love, commitment to spiritual growth,
+					and active service in the community.
+				</p>
+			</article>
+	</div>
+</section>
+
+</div>
 
 <!-- Footer -->
 		<section id="newsletter" style="margin-top: 0;">
