Update for 4/25 meeting
formated colors, images in history, staff, added rentals page, services.

--- a/pt St. Philips/events-list-garvey.html
+++ b/pt St. Philips/events-list-garvey.html
@@ -34,7 +34,8 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="current dropdown-toggle"><a href="#">About</a></li>
-						<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+	<li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="about.html">INFO</a>
 							<a class="dropdown-item" href="testimonies.html">TESTIMONIES</a>
     						<a class="dropdown-item" href="events.html">EVENTS</a>
     						<a class="dropdown-item" href="rentals.html">RENTALS</a>
@@ -49,72 +50,42 @@
 	</header>
 <!-- Navigation End -->
 
-<!-- About Start -->
-	<div id="staff-img">
-		<div class="container">
-			<section id="services">
-				<ul>
-					<li><a href="about.html">SERVICES</a></li>
-					<li><a href="about-1.html">MUSIC</a></li>
-					<li><a href="about-2.html">BULLETIN</span></a></li>
-					<li><a href="about-3.html"><span class="active-service">STAFF</span></a></li>
-					<li><a href="about-4.html">DIRECTIONS</a></li>
-				</ul>
-			</section>
-		</div>
+<!-- Content Start -->
+<div id="event" class="container">
+
+<div id="title">
+	<div class="coll dates">
+		<h1>Ecclesia Ministry @ Marcus Garvey Park</h1>
+		<h4>May 12, 2018</h4>
+		<h3>4:00 p.m.</h3>
 	</div>
-<!-- About End -->
-	
-<!-- Staff Directory -->
-<div class="container" id="staff-overall-container">
-<h2 class="mission-header mission-header-green">STAFF DIRECTORY</h2>
-
-	<div id="staff-img-container" class="container">
-	
-		<div class="staff-role">
-			<h2 class="staff-name">Gail Silver</h2>
-			<img class="staff-img-pg" src="./staff/gsilver.jpg">
-			<h2 class="staff-sub">Parish Administrator</h2>
-		</div>
-
-		<div class="staff-role">
-			<h2 class="staff-name">Fitzroy Edwards</h2>
-			<img class="staff-img-pg" src="./staff/fedwards.jpg">
-			<h2 class="staff-sub">Deacon</h2>
-		</div>
-	
-		<div class="staff-role">
-			<h2 class="staff-name">Erik Carlson</h2>
-			<img class="staff-img-pg" src="./staff/ecarlson.jpg">
-			<h2 class="staff-sub">Organist and Choir Director</h2>
-		</div>
+	<div class="coll coll-img">
+		<a href="./pics/law day.jpg" download><img src="./pics/law day.jpg"></a>
+		<img src="placeholder.png">
+		<img src="placeholder.png">
+		<img src="placeholder.png">
 	</div>
-
-<!-- Row End -->
-
-	<div id="staff-img-container" class="container">
-		<div class="staff-role">
-			<h2 class="staff-name">Douglas Wilburn</h2>
-			<img class="staff-img-pg" src="./staff/dj.jpg">
-			<h2 class="staff-sub">Sexton</h2>
-		</div>
-		
-		<div class="staff-role">
-			<h2 class="staff-name">Charles Lovell</h2>
-			<img class="staff-img-pg" src="./staff/clovell.jpg">
-			<h2 class="staff-sub">Director, Contemporary Choir</h2>
-		</div>
-
-		<div class="staff-role">
-			<h2 class="staff-name">Chloe Breyer</h2>
-			<img class="staff-img-pg" src="./staff/cbreyer.jpg">
-			<h2 class="staff-sub">Associate Priest</h2>
-		</div>
+	<div class="coll coll-cam">
+		<a href=""><img src="camera.png"></a>
 	</div>
 </div>
-<!-- Row End -->
+</div>
 
-<!-- Staff Directory End -->
+<div class="container">
+	<div class="p-text">
+			<p> <span style="font-size: 200%; margin-right: .1em;">E</span>
+			A coalition of churches, of which St. Philip's is one, conducts amonthly outdoor worship service in Marcus Garvey Park located on Madison between  E 120  and 124 Streets.  The host church makes and serves lunch for distribution after service in the park.
+			<br>
+			Madison Avenue @ E 120 Street to 124 Street.  
+			<br>
+			Dates for St. Philips are every third Sunday of the month.  
+			<br>
+			Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments. 
+			</p>
+	</div>
+</div>
+
+<!-- Content End -->
 
 <!-- Footer -->
 		<section style="margin-top: 0;" id="newsletter">
