--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -54,57 +54,70 @@
 <section id="boxes">
 			<div class="container">
 				<div class="box">
-					<h2>Event 1</h2>
-					<a href="events-list-1.html"><img style="min-width: 333px; max-width: 333px;" src="./pics/Jazz 1.jpg"></a>
-					<p><i><span style="color: black; font-size: 200%; font-weight: bold; margin-right: 0.1em;">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</i>
+					<h2>Law Day</h2>
+					<a href="events-list-law-day.html"><img src="./pics/thurgood.jpg"></a>
+					<p><i><span>
+					T</span>
+					hurgood Marshall Law Day 2018</i>
 					<br>
 					<br>
-					<i>Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i>
+					<i>An Evensong Conversation</i>
+					<br>
+					<br>
+					<i>St. Philip's Church</i>
+					<i>2-4 West 134th Street, Net York, New York 10030</i>
+					<br>
+					<br>
+					<i>Saturday, May 12th at 4:00 p.m.</i>
+					<br>
+					<br>
+					<i>Featuring Darcel Clark, 13th District Attorney for Bronx
+					County</i>
 					</p>
 				</div>
 	
 				<div class="box">
-					<h2>Event 2</h2>
-					<a href="events-list-2.html"><img src="..."></a>
-					<p><i><span style="color: black; font-size: 200%; font-weight: bold; margin-right: 0.1em;">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</i>
+					<h2>Marcus Garvey</h2>
+					<a href="events-list-garvey.html"><img src="./pics/ecclesia.jpeg"></a>
+					<p><i><span>E</span>cclesia Ministry @ Marcus Garvey Park:  - Madison Avenue @ E 120 Street to 124 Street.  
 					<br>
 					<br>
-					<i>Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i>
+					Dates for St. Philips are every third Sunday of the month.  
+					<br>
+					<br>
+					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.
+					</i>
+					</p>
+				</div>
+			</div>
+</section>
+
+<section id="boxes">
+			<div class="container">
+				<div class="box">
+					<h2>Candace Organization</h2>
+					<img src="./pics/placeholder.jpg">
+					<p><i><span>
+					C</span>
+					collection of toiletries for the month of May</i>
+					</p>
+				</div>
+	
+				<div class="box">
+					<h2>Dance of the Village Elders</h2>
+					<img src="./pics/placeholder.png">
+					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m. 
+					<br>
+					<br>Class is designed to address the physical concerns of seniors.  
+					<br>
+					<br>Fof more information contact the parish office at 212-862-4940.
+					</i>
 					</p>
 				</div>
 			</div>
 </section>
 
 <!-- Content End -->
-
-<!-- Events List -->
-
-<!-- <div id="title">
-	<div class="coll dates" style="border: 1px solid red;">
-		
-		<h4>Date/Year</h4>
-		<h1>Event 1</h1>
-		<h3>Time 2:30 - 3:30</h3>
-	</div>
-	<div class="event-listing" style="border: 1px solid red; padding: 2.7em 0 1.76em 0; width: 80%; font-size: 110%; padding-left: 10%;">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat.</p>
-	</div>
-</div> -->
-
-<!-- Events List End -->
 
 <!-- Footer -->
 		<section id="newsletter">
