--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -163,7 +163,7 @@
 
 		<aside id="volunteerism-img-sec">
 			<div id="container">
-			<img src="placeholder">
+			<img src="./staff/gsilver.jpg">
 			</div>
 		</aside>
 
