--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -83,26 +83,43 @@
 </div>
 <!-- Carousel End -->
 
+<!-- Mission -->
 <header></header>
 
 <div class="container">
-
-<section id="mission">
-	<div id="mission-start" class="container">
-		<h2 class="mission-header mission-header-green">The Mission of St. Philip's
-			Church is:
-		</h2>
-			<article class="mission-top-sub">
-				<p>To be a welcoming and vibrant intergenerational community
-					of faith, focused on sharing the Gospel of Jesus Christ
-					through joyful worship and love, commitment to spiritual growth,
-					and active service in the community.
-				</p>
-			</article>
-	</div>
-</section>
-
+	<section id="mission">
+		<div id="mission-start" class="container">
+			<h2 class="mission-header mission-header-green">The Mission of St. Philip's
+				Church is:
+			</h2>
+				<article class="mission-top-sub">
+					<p>To be a welcoming and vibrant intergenerational community
+						of faith, focused on sharing the Gospel of Jesus Christ
+						through joyful worship and love, commitment to spiritual growth,
+						and active service in the community.
+					</p>
+				</article>
+		</div>
+	</section>
 </div>
+
+<!-- Mission End -->
+
+<!-- Services -->
+<div class="container">
+	<section id="mission">
+		<div id="mission-start" class="container">
+			<h2 class="mission-header mission-header-green">Services
+			</h2>
+				<article class="mission-top-sub">
+					<p>9:00 a.m. - Morning Service
+					</p>
+				</article>
+		</div>
+	</section>
+</div>
+<!-- Services End -->
+
 
 <!-- Footer -->
 		<section id="newsletter" style="margin-top: 0;">
