--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -80,263 +80,106 @@
 
 <!--  -->
 
+<!--  -->
+
 <section id="volunteerism">
 	<div class="container">
+		<h2 class="ministries-header">Ecclesia Ministry</h2>
+			<article class="ministries-content">
+				<p>A coalition of churches, of which St. Philip's is one, conducts amonthly outdoor worship service in Marcus Garvey Park located on Madison between  E 120  and 124 Streets.  The host church makes and serves lunch for distribution after service in the park.<br>
+			</article>
+	</div>
+</section>
+
+		<aside id="ministries-img-sec">
+			<div id="container">
+			<img src="placeholder">
+			</div>
+		</aside>
+
+<header></header>
+
+<!--  -->
+
+
+
+<div class="container">
+	<br>
 		<h2 class="ministries-header">Acolytes</h2>
-			<article class="ministries-content">
-				<p>Acoytes assist the priest on the altar and ensure the orderly and smooth progression of worship.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+	
 		<h2 class="ministries-header">Altar Guild</h2>
-			<article class="ministries-content">
-				<p>The Altar Guild are  lay persons entrusted with the responsibility of preparing the altar for all services and of caring for the communion vessels and elements for Holy Communion.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Candace Organization</h2>
-			<article class="ministries-content">
-				<p>This organization fosters spiritual growth through service oriented activities within the church and the community-at-large.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
 		<h2 class="ministries-header">Cutural Committee</h2>
-			<article class="ministries-content">
-				<p>Offers and supports activities that foster, communication, education, and cultural exchange and provides enrichment and involvement for St. Philip’s congregation and our Harlem community.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Daughters of the King</h2>
-			<article class="ministries-content">
-				<p>An Episcopalian ministry that promotes faith in Christ’s kingdom through service, prayer, and evangelism.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Flower Guild</h2>
-			<article class="ministries-content">
-				<p>For the beautification of our sanctuary with plants and flowers.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Greeters Ministry</h2>
-			<article class="ministries-content">
-				<p>Welcomes visitors and educates interested persons about the history of the church, schedule, and activities.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
-
+	<br>
+</div>
 <!--  -->
+<div class="container">
 
-<section id="volunteerism">
-	<div class="container">
 		<h2 class="ministries-header">Health Ministry Team</h2>
-			<article class="ministries-content">
-				<p>Promotes health and wellness for parishioners, through health education and illness prevention programs.  Provides monthly hypertension monitoring for parishioners, visitors, and community-at-large.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Integrity Ministry</h2>
-			<article class="ministries-content">
-				<p>A local partner of Integrity USA, the Episcopal Church’s ministry by and for LGBT (lesbian, gay, bisexual, and transgender) and those who love them.  <br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Lay Eucharist Ministry</h2>
-			<article class="ministries-content">
-				<p>The Diocese of New York license lay Eucharistic ministers.  LEM are elected by Rector or priest-in-charge.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Ushers Guild</h2>
-			<article class="ministries-content">
-				<p>Ushers serve by receiving members and visitors to worship on Sundays, feast, fast days, funerals, and weddings.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">Young Adult Ministry</h2>
-			<article class="ministries-content">
-				<p>Young adults gather together for worship, education, social events, and outreach.<br>
-			</article>
-	</div>
-</section>
-
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
+	<br>
 
 <!--  -->
 
-<section id="volunteerism">
-	<div class="container">
+
 		<h2 class="ministries-header">St. Philip's Jazztree</h2>
-			<article class="ministries-content">
-				<p>Promotes the preservation of African-Americans’' contribution to an array of musical genres jazz, blues, and Afro-Cuban rhythms.<br>
-			</article>
-	</div>
-</section>
+	<br>
+</div>
 
-
-		<aside id="ministries-img-sec">
-			<div id="container">
-			<img src="placeholder">
-			</div>
-		</aside>
-
-<header></header>
 <!-- Time End -->
 
 
