--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -50,7 +50,24 @@
 	</header>
 <!-- Navigation End -->
 
+<!-- Giving Header -->
+<div id="rentals-background">
+<div class="jumbotron-fluid giving">
+  <div class="container">
+    <h1 id="rentals-header" class="display-4">RENTALS</h1>
+    <p id="rentals-sub" class="lead"></p>
 
+  </div>
+  
+  <div>
+    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button">Rental Agreement</button></a>
+  </div>
+
+</div>
+</div>
+
+<header></header>
+<!-- Giving Header End -->
 
 <!-- Footer -->
 		<section id="newsletter" style="margin-top: 0;">
