--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -72,7 +72,7 @@
 
 		<aside id="ministries-img-sec">
 			<div id="container">
-			<img src="placeholder">
+			<img src="./pics/warriors.jpg" style="max-height: 250px; max-width: 250px; min-height: 250px; display: inline-block; float: right; min-width: 250px; margin-bottom: 16%;">
 			</div>
 		</aside>
 
@@ -103,7 +103,12 @@
 
 
 
-<div class="container">
+<div class="container m-left">
+
+	<br>
+		<h2 class="ministries-header-main">Ministries list</h2>
+	<br>
+
 	<br>
 		<h2 class="ministries-header">Acolytes</h2>
 	<br>
@@ -144,7 +149,7 @@
 	<br>
 </div>
 <!--  -->
-<div class="container">
+<div class="container m-right">
 
 		<h2 class="ministries-header">Health Ministry Team</h2>
 	<br>
