History placement & vision

--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -63,6 +63,27 @@
 			</section>
 		</div>
 	</div>
+<!-- Services -->
+<div class="container">
+	<section id="mission">
+		<div id="mission-start" class="container">
+			<h2 class="mission-header mission-header-green">Services
+			</h2>
+				<article class="mission-top-sub">
+					<p>9:00 a.m. Morning Prayer
+					<br>
+					<br>
+					 11:00 a.m.  first, second and fourth Sundays - Solemn High Mass.  
+					 <br>
+					 <br>
+					 Third and fifth Sundays - Gospel Eucharist 
+					</p>
+				</article>
+		</div>
+	</section>
+</div>
+<!-- Services End -->
+
 <!-- About End -->
 
 <!-- Footer -->
