--- a/pt St. Philips/about-3.html
+++ b/pt St. Philips/about-3.html
@@ -115,6 +115,48 @@
 </div>
 <!-- Row End -->
 
+<div class="container" id="staff-overall-container">
+<h2 class="mission-header mission-header-green">VESTRY</h2>
+	
+		<div id="staff-img-container" class="container">
+		
+		<div class="vestry-role-top">
+			<h2 class="vestry-name fit">WARDENS</h2>
+			<br>
+			<br>
+			<h2 class="vestry-sub">Lisa Forte-Mason, Esq.</h2>
+			<h2 class="vestry-sub">Charles E. Williams, III</h2>
+		</div>
+		
+		<div class="vestry-role-top">
+			<h2 class="vestry-name">BUILDING &amp; GROUNDS COMMITTEE</h2>
+			<br>
+			<h2 class="vestry-sub">Garl Robinson</h2>
+			<h2 class="vestry-sub">Randolph V. Jacobs, Jr.</h2>
+		</div>
+	
+		<div class="vestry-role-top">
+			<h2 class="vestry-name fit2">MEMBERSHIP STEWARDSHIP</h2>
+			<br>
+			<h2 class="vestry-sub">Rita Livingston, Chair</h2>
+			<h2 class="vestry-sub">Vincent Jacobs</h2>
+			<h2 class="vestry-sub">Erdene Kims</h2>
+		</div>
+
+		<div class="vestry-role-top">
+			<h2 class="vestry-name fit2">FINANCE COMMITTEE</h2>
+			<br>
+			<h2 class="vestry-sub">Erdene Kims, Treasurer</h2>
+			<h2 class="vestry-sub">Eric Hall</h2>
+			<h2 class="vestry-sub">Doreen Malliet</h2>
+			<h2 class="vestry-sub">Sheila Vaughan</h2>
+			<h2 class="vestry-sub">Mabel Wernham</h2>
+		</div>
+
+	</div>
+
+</div>
+
 <!-- Staff Directory End -->
 
 <!-- Footer -->
