--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -95,9 +95,9 @@
 
 <section id="birthday">
 	<div class="container">
-		<h2 class="baptisim-header">BIRTHDAY</h2>
+		<h2 class="baptisim-header" style="font-size: ">SPECIAL DAY</h2>
 			<article class="baptisim-content">
-				<p>have a birthday coming up? <br> <br>
+				<p>have a birthday or anniversary coming up? <br> <br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				</p>
@@ -111,9 +111,9 @@
 
 <section id="anniversary">
 	<div class="container">
-		<h2 class="anniversary-header">ANNIVERSARIES</h2>
+		<h2 class="anniversary-header">WEDDINGS</h2>
 			<article class="anniversary-content">
-				<p>have a anniversary coming up? <br> <br>
+				<p>have a wedding coming up? <br> <br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				</p>
