--- a/pt St. Philips/history.html
+++ b/pt St. Philips/history.html
@@ -269,6 +269,11 @@
 		<aside>
 			<div id="container">
 			<img class="history-img-8" src="./pics/history-portrait-5.jpg">
+						<section class="history-img-8-sub">
+				<p>Dr. M. Moran Weston Sixth Rector
+				<br>
+				1957-1982</p>
+			</section>
 			</div>
 		</aside>
 
