--- a/pt St. Philips/history.html
+++ b/pt St. Philips/history.html
@@ -195,7 +195,7 @@
 
 		<aside>
 			<div id="container">
-			<img class="history-img-5" src="./pics/hist-altar.jpg">
+			<img class="history-img-5" src="./pics/church-front.jpg">
 			</div>
 		</aside>
 	</div>
