Update before Facetime

--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -80,33 +80,46 @@
 					</p>
 				</article>
 
-<section id="boxes" style="padding-bottom: 5%;">
-			<div class="container">
-				<div class="box">
-					<h2>Candace Organization</h2>
-					<p><i><span>
-					C</span>
-					collection of toiletries for the month of May</i>
-					</p>
-				</div>
-	
-				<div class="box">
-					<h2>Dance of the Village Elders</h2>
-					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m. 
-					<br>
-					<br>Class is designed to address the physical concerns of seniors.  
-					<br>
-					<br>Fof more information contact the parish office at 212-862-4940.
-					</i>
-					</p>
-				</div>
-			</div>
-</section>
-
 			<h2 class="mission-header mission-header-green">Worship
 			</h2>
 				<article class="mission-top-sub">
 					<p>Sunday School - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018.
+					<br>
+					<br>
+					</p>
+					<h3 class="mission-sub-border">What to Expect on Sunday</h3>
+					<br>
+					<p>St. Philip’s is a diverse, inclusive community committed to welcoming all, praying together, serving our brothers and sisters in need and sharing fellowship.
+					<br>
+					<br>
+					We have all been newcomers and understand that when you are planning to visit a church for the first time, you can have questions.  We hope that you will find the following information helpful.
+					<br>
+					<br>
+					If there are things about our worship that seem difficult and don’t make sense, be patient with the unfamiliarity. Consider that you are entering into a conversation with God and the faithful, which began centuries before we were here and will continue after we are gone. Just join in as you are, and we will all be changed as we go. All who seek God are welcome to the Lord’s Table to receive the Bread and Wine. Even if you do not seek God, you are still welcome because God seeks you. Come and hold in your and taste on your lips the love that we cannot comprehend.
+					<br>
+					<br>
+					We know it can seem daunting to visit a church for the first time, not unlike visiting a foreign country where you are uncertain about the customs and traditions. We hope this brief introduction will make your first visit at St. Philip’s more comfortable.
+					</p>
+					<h3 class="mission-sub-border">Two Sunday Morning Services 
+						<br>and Christian Education</h3>
+					<br>
+					<p>Our 9 a.m. service is the smaller of our two Sunday services, and it is done without music. The 11:00 a.m. service, our main service, is a Choral Eucharist with the St. Philip’s Choir (during the academic year), or with music by small ensembles (during the summer months). The congregation joins in the hymns and canticles at the 11:00 a.m. liturgy, and you will find us to be good singers!
+					<br>
+					<br>
+					Church School (for children) takes place during the first half of the 11:00 a.m. Eucharist; the children then join their families in church after the sermon to participate in the remainder of the service. Ask an usher to direct you to the Church School classrooms. Parents are also welcome to bring their children to church for the entire service.
+					</p>
+					<h3 class="mission-sub-border">A Liturgical Church</h3>
+					<p>
+					St. Philip’s is a liturgical church, which means we follow fixed orders of service, known as liturgies, which are found in the Book of Common Prayer. The Eucharist is the primary focus of our Sunday worship. The Revised Common Lectionary provides the schedule of Bible Lessons and Psalms to be read on specified days throughout the Church Year.
+					</p>
+					<h3 class="mission-sub-border">The Service Bulletin, The Book of Common Prayer, The Hymnal 1982 and LEVAS 
+						<br>(Lift Every Voice and Sing)</h3>
+					<p>
+					Our weekly service bulletin provides an outline of the service with page references to the Book of Common Prayer and the Hymnal 1982 and LEVAS to enable you to follow the order of service. You will find a friendly community at St. Philip’s—if you need help finding your place in the service, just ask anyone seated around you. They will be happy to help you!
+					</p>
+					<h3 class="mission-sub-border">The Sign of the Cross</h3>
+					<p>
+					Many people at St. Philip’s follow the ancient custom of making the sign of the cross at various points in the service, in remembrance of their Baptism.
 					</p>
 				</article>
 		</div>
