--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -95,7 +95,7 @@
 
 <section id="birthday">
 	<div class="container">
-		<h2 class="baptisim-header" style="font-size: ">SPECIAL DAY</h2>
+		<h2 class="baptisim-header" style="font-size: ">A SPECIAL DAY</h2>
 			<article class="baptisim-content">
 				<p>have a birthday or anniversary coming up? <br> <br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
