--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -92,6 +92,29 @@
 			</div>
 </section>
 
+<section id="boxes" style="padding-bottom: 5%;">
+			<div class="container">
+				<div class="box">
+					<h2>Candace Organization</h2>
+					<p><i><span>
+					C</span>
+					collection of toiletries for the month of May</i>
+					</p>
+				</div>
+	
+				<div class="box">
+					<h2>Dance of the Village Elders</h2>
+					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m. 
+					<br>
+					<br>Class is designed to address the physical concerns of seniors.  
+					<br>
+					<br>Fof more information contact the parish office at 212-862-4940.
+					</i>
+					</p>
+				</div>
+			</div>
+</section>
+
 
 
 <!-- Content End -->
