--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -60,7 +60,8 @@
   </div>
   
   <div>
-    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button">Rental Agreement</button></a>
+    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Rental Agreement</button></a>
+    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member Agreement</button></a>
   </div>
 
 </div>
